cargo-features = ["codegen-backend"]
[package]
name = "midiplayer_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
libloading = "0.8.8"
lazy_static = "1.4.0"
thousands = "0.2.0"
clap = { version = "4.5.45", features = ["derive"] }

[profile.dev]
debug = 0
codegen-backend = "cranelift"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
